# stock_analyst

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
api/: main.py
src/stock_analyst/: crew.py  main.py
src/stock_analyst/config/: agents.yaml  tasks.yaml
src/stock_analyst/tools/: search_tool.py  yfinance_tool.py
